# CPPTemplate

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
.github/agents/: cpp.agent.md
docker/: Dockerfile
docs/: BuildStrategy.md  CodingGuideline.md  TestingStrategy.md
scripts/: build.sh
src/: main.cpp
src/features/greeting/: greeting_data.hpp  greeting_service.cpp  greeting_service.hpp
src/shared/: result.hpp
